--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt-themes/alpine": "latest",
     "@nuxt/devtools": "^1.0.8",
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxthq/studio": "^1.0.11",
     "@nuxtjs/plausible": "^0.2.4",
     "@types/node": "^20.11.5",
     "eslint": "^8.56.0",
